Changes for 2.2.2rc1

New features:
..F.....S. [ZBXNEXT-2069] added HOST.PORT macro support for internal and trigger based notifications (wiper, Oleg)
A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japanese, Russian, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-7660] fixed host.get returning the "templates" property even if the "templateids" parameter is not used (Pavels)
...G...... [ZBX-6790] changed net.tcp.listen and net.udp.listen keys to read the whole /proc/net/(tcp|udp)(6) file in a single operation to avoid losing data if the file is changed between reading operations (wiper)
.......PS. [ZBX-7587] set the correct server status (down) after ORA-01012, ORA-02396 errors (wiper)
....I..... [ZBX-7515] added missing delayed loading option of wevtapi.dll for x64 systems (igors)
...G...... [ZBX-7481] added checking for OpenBSD version to avoid compilation error on OpenBSD v5.4 and newer due to removed swapins/swapouts uvmexp fields (igors)
.......PS. [ZBX-7576] when pinging a broadcast address ignore responses from other addresses (wiper)
..F....... [ZBX-7632] allow to add favourite graph from disable host (Eduard)
..F....... [ZBX-7634] removed sid from trigger URL in Monitoring->Triggers (Oleg)
...GI..PS. [ZBX-5526] removed checking for PosgreSQL server version and disabled nonstandard use of escape strings in order to support versions newer than 8.1 (igors)
...G...... [ZBX-7414] added description to HostnameItem that UserParameters and aliases are not supported (igors)
..F....... [ZBX-7590] fixed displaying functional macros in graph names when host visible name is not empty (Ivo)
A......... [ZBX-7591] fixed deleting web scenario steps on template linked to host (Ivo)
..F....... [ZBX-7508] fixed import map with LLD triggers (Eduard)
..F....... [ZBX-7518] fixed graph scrollbar overflow when clicking period "All" and with no page refresh option (Ivo)